--- a/src/Pvz1/res.qrc
+++ b/src/Pvz1/res.qrc
@@ -6,5 +6,18 @@
         <file>res/mode.png</file>
         <file>res/background1.jpg</file>
         <file>res/background1.png</file>
+        <file>res/back_btn.png</file>
+        <file>res/background2.png</file>
+        <file>res/cherry_box.png</file>
+        <file>res/peanut_box.png</file>
+        <file>res/peanut_cursor.png</file>
+        <file>res/Peashooter.gif</file>
+        <file>res/repeater_box.png</file>
+        <file>res/Shovel.png</file>
+        <file>res/shovel_box.png</file>
+        <file>res/snowpeanut_box.png</file>
+        <file>res/sun_flower.png</file>
+        <file>res/Sunflower.gif</file>
+        <file>res/wallnut_box.png</file>
     </qresource>
 </RCC>
